--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
         </div>
         <div class="input">
           <label>Altura:</label>
-          <input type="number" id="Altura" />
+          <input type="number" id="altura" />
         </div>
         <div class="input">
           <label>Peso:</label>
           <input type="number" id="peso" />
         </div>
-      </div>
-      <button id="calcular">Calcular</button>
+        <button id="calcular">Calcular</button>
 
-      <div class="result" id="resultado"></div>
+        <div class="result" id="resultado"></div>
+      </div>
     </main>
+    <script src="./imc.js"></script>
   </body>
 </html>
